[package]
name = "darkest_mod_bundler"
version = "0.1.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.15.0", default-features = false, features = ["crossterm-backend"] }
crossterm = "0.17"
difference = "2.0"
serde-xml-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simplelog = "0.8"
