[package]
name = "darkest_dungeon_mod_bundler"
version = "0.2.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.15", default-features = false, features = ["crossterm-backend"] }
difference = "2.0"
serde-xml-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.8"
crossbeam-channel = "0.4"
thiserror = "1.0"
indoc = "0.3"
combine = "4.2"
roxmltree = "0.13"
lazy_static = "1.4"
regex = "1.3"
xmlparser = "0.13"
